--- a/aillm_4.ipynb
+++ b/aillm_4.ipynb
@@ -31,7 +31,7 @@
       "cell_type": "code",
       "source": [
         "!pip install openai\n",
-        "%env OPENAI_API_KEY=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"
+        "%env OPENAI_API_KEY=###"
       ],
       "metadata": {
         "id": "TPNgtkRQzqRB"
