--- a/aillm_4.ipynb
+++ b/aillm_4.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNBkZIq+rgFzy77lJP50Hsr",
+      "authorship_tag": "ABX9TyNaNL7N43LfqjQ/E642Kj5M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install openai\n",
-        "%env OPENAI_API_KEY=###"
+        "!pip install openai"
       ],
       "metadata": {
         "id": "TPNgtkRQzqRB"
@@ -41,7 +39,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "import os\n",
+        "os.chdir(\"/content/drive/My Drive/Colab Notebooks\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z_Xxp67aHOEp",
+        "outputId": "95a415ac-c37f-4ca5-ab75-6b7b4a33adeb"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "nvmGYUy2y9jN"
       },
@@ -49,8 +74,9 @@
       "source": [
         "import openai\n",
         "import os\n",
+        "from sk_utils import read_sk\n",
         "\n",
-        "openai.api_key = os.environ.get(\"OPENAI_API_KEY\")\n",
+        "openai.api_key = read_sk()\n",
         "\n",
         "class Conversation:\n",
         "    def __init__(self, prompt, num_of_round):\n",
@@ -105,7 +131,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-yHPCQcjzSEN",
-        "outputId": "26385991-9423-4fed-bc8e-b1a72238b583"
+        "outputId": "ad88ac3e-7f32-4e43-a854-5802de19c4ef"
       },
       "execution_count": 6,
       "outputs": [
@@ -114,28 +140,25 @@
           "name": "stdout",
           "text": [
             "User : 你是谁？\n",
-            "Assistant : 我是一个中国厨师，专注于中餐的烹饪。有什么菜谱问题需要我解答吗？\n",
+            "Assistant : 我是一个中国厨师，专门负责烹饪美食。有什么菜品需要我帮助吗？\n",
             "\n",
             "User : 请问鱼香肉丝怎么做？\n",
-            "Assistant : 鱼香肉丝的做法如下：\n",
-            "1. 将猪肉切成细丝，加入少许盐和淀粉拌匀。\n",
-            "2. 将葱姜蒜切末，辣椒切丝备用。\n",
-            "3. 锅中加油，烧热后加入葱姜蒜末炒香。\n",
-            "4. 加入肉丝翻炒至变色，加入辣椒丝继续翻炒。\n",
-            "5. 加入豆瓣酱、甜面酱、酱油、糖和醋炒匀。\n",
-            "6. 加入青椒丝和木耳翻炒均匀。\n",
-            "7. 最后加入适量的水淀粉勾芡，翻炒均匀即可。\n",
-            "注意：鱼香肉丝的口味可以根据个人喜好调整，喜欢麻辣的可以加入花椒粉和辣椒油。\n",
+            "Assistant : 鱼香肉丝是一道经典的川菜，制作方法如下：\n",
+            "1. 将猪肉切成细丝，加入少许盐、料酒、淀粉拌匀腌制10分钟。\n",
+            "2. 锅中加油烧热，放入蒜末、姜末煸炒出香味。\n",
+            "3. 加入腌制好的猪肉丝翻炒至变色。\n",
+            "4. 加入青椒丝、红椒丝、木耳丝翻炒均匀。\n",
+            "5. 加入酱油、糖、醋、料酒、鸡精、水淀粉调成的鱼香汁，翻炒均匀收汁即可。\n",
+            "希望你喜欢这道鱼香肉丝！\n",
             "\n",
             "User : 那蚝油牛肉呢？\n",
-            "Assistant : 蚝油牛肉的做法如下：\n",
-            "1. 将牛肉切成薄片，加入少许盐、生抽和淀粉拌匀腌制15分钟。\n",
-            "2. 锅中加油，烧热后加入蒜末炒香。\n",
-            "3. 加入牛肉片煸炒至变色。\n",
-            "4. 加入青椒和红椒翻炒均匀。\n",
-            "5. 加入蚝油、生抽、糖和少许水炒匀。\n",
-            "6. 最后加入适量的水淀粉勾芡，翻炒均匀即可。\n",
-            "注意：煸炒牛肉片时火候要掌握好，以保持肉质嫩滑。可以根据个人口味加入适量的辣椒或其他调料。\n",
+            "Assistant : 蚝油牛肉是一道香气扑鼻的菜品，制作方法如下：\n",
+            "1. 将牛肉切成薄片，加入盐、生粉、料酒腌制10分钟。\n",
+            "2. 锅中加油烧热，放入蒜末、姜末煸炒出香味。\n",
+            "3. 加入腌制好的牛肉片翻炒至变色。\n",
+            "4. 加入蚝油、酱油、糖、生抽、水淀粉调成的调味汁，翻炒均匀。\n",
+            "5. 最后加入青椒丝、红椒丝翻炒均匀即可。\n",
+            "希望你喜欢这道蚝油牛肉！\n",
             "\n"
           ]
         }
@@ -153,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MqRyg0L00C3u",
-        "outputId": "761444fa-7306-45c2-a747-5599b9ab3590"
+        "outputId": "4aa05310-3caf-4be4-a17e-af525b3a0c38"
       },
       "execution_count": 7,
       "outputs": [
@@ -162,7 +185,7 @@
           "name": "stdout",
           "text": [
             "User : 我问你的第一个问题是什么？\n",
-            "Assistant : 你的第一个问题是关于鱼香肉丝的做法。\n",
+            "Assistant : 你的第一个问题是关于鱼香肉丝的制作方法。\n",
             "\n"
           ]
         }
@@ -180,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y1TjdU-40O7F",
-        "outputId": "3870703e-5254-4f51-ede1-629e1814759f"
+        "outputId": "f146ad80-0585-44a2-a1be-df4132dfccb1"
       },
       "execution_count": 8,
       "outputs": [
@@ -189,7 +212,7 @@
           "name": "stdout",
           "text": [
             "User : 我问你的第一个问题是什么？\n",
-            "Assistant : 对不起，我犯了一个错误。你的第一个问题是关于蚝油牛肉的做法。非常抱歉给你带来困惑。\n",
+            "Assistant : 非常抱歉，我误解了你的问题。你的第一个问题是关于蚝油牛肉的制作方法。对不起给你带来困扰。\n",
             "\n"
           ]
         }
@@ -207,7 +230,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "biNbp_6x0ZrU",
-        "outputId": "9a06c037-d414-493f-d082-0ce82fd8dcfe"
+        "outputId": "bad89003-c4ae-4ec8-d36e-ab9321028475"
       },
       "execution_count": 9,
       "outputs": [
@@ -216,7 +239,7 @@
           "name": "stdout",
           "text": [
             "User : 我问你的第一个问题是什么？\n",
-            "Assistant : 对不起，我刚才回答错误了。你的第一个问题是关于宫保鸡丁的做法。非常抱歉给你带来困惑。\n",
+            "Assistant : 非常抱歉，我之前的回答有误。请问您的第一个问题是什么？我会尽力回答。\n",
             "\n"
           ]
         }
@@ -272,10 +295,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 346
+          "height": 328
         },
         "id": "93hol9Q-16MN",
-        "outputId": "49e35ea3-8000-47b6-f331-6e5253f42ee6"
+        "outputId": "99b48810-1d14-44ff-b4b6-128c73d99962"
       },
       "execution_count": 11,
       "outputs": [
@@ -283,10 +306,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "询问 {你是谁？} 消耗的token数量是 : 124\n",
-            "询问 {请问鱼香肉丝怎么做？} 消耗的token数量是 : 393\n",
-            "询问 {那蚝油牛肉呢？} 消耗的token数量是 : 617\n",
-            "询问 {我问你的第一个问题是什么？} 消耗的token数量是 : 662\n",
+            "询问 {你是谁？} 消耗的token数量是 : 122\n",
+            "询问 {请问鱼香肉丝怎么做？} 消耗的token数量是 : 384\n",
+            "询问 {那蚝油牛肉呢？} 消耗的token数量是 : 621\n",
             "Rate limit reached for default-gpt-3.5-turbo in organization org-LsRSFcCdezFMWrF1yYEd6eYe on requests per min. Limit: 3 / min. Please try again in 20s. Contact us through our help center at help.openai.com if you continue to have issues. Please add a payment method to your account to increase your rate limit. Visit https://platform.openai.com/account/billing to add a payment method.\n"
           ]
         },
@@ -309,32 +331,10 @@
         "!pip install tiktoken"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Gmve3E7c3GGm",
-        "outputId": "46a631a3-0c5d-4425-91de-06cf1f8b73de"
+        "id": "Gmve3E7c3GGm"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting tiktoken\n",
-            "  Downloading tiktoken-0.5.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m18.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: regex>=2022.1.18 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2023.6.3)\n",
-            "Requirement already satisfied: requests>=2.26.0 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2.31.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (3.2.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2023.7.22)\n",
-            "Installing collected packages: tiktoken\n",
-            "Successfully installed tiktoken-0.5.1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -360,7 +360,7 @@
         "id": "FacG04Fe29ad",
         "outputId": "a71e54a3-2740-4a6d-cd93-462f1d553400"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
         "id": "lPakESy_51f6",
         "outputId": "86842690-1e52-4d33-84ee-850ff5de01ec"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
