使用 Colaboratory 创建

--- a/aillm_6.ipynb
+++ b/aillm_6.ipynb
@@ -1047,10 +1047,50 @@
         "print(moderation(threaten))"
       ],
       "metadata": {
-        "id": "vB79XwQ_trfJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vB79XwQ_trfJ",
+        "outputId": "6a8ee393-1455-4b35-c0c1-9c4aa91b5c6d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"flagged\": true,\n",
+            "  \"categories\": {\n",
+            "    \"sexual\": false,\n",
+            "    \"hate\": false,\n",
+            "    \"harassment\": true,\n",
+            "    \"self-harm\": false,\n",
+            "    \"sexual/minors\": false,\n",
+            "    \"hate/threatening\": false,\n",
+            "    \"violence/graphic\": false,\n",
+            "    \"self-harm/intent\": false,\n",
+            "    \"self-harm/instructions\": false,\n",
+            "    \"harassment/threatening\": true,\n",
+            "    \"violence\": true\n",
+            "  },\n",
+            "  \"category_scores\": {\n",
+            "    \"sexual\": 3.0188131859176792e-05,\n",
+            "    \"hate\": 0.004910948220640421,\n",
+            "    \"harassment\": 0.9346374869346619,\n",
+            "    \"self-harm\": 0.0005968962796032429,\n",
+            "    \"sexual/minors\": 1.0020055015047546e-05,\n",
+            "    \"hate/threatening\": 0.000860472908243537,\n",
+            "    \"violence/graphic\": 9.340840915683657e-05,\n",
+            "    \"self-harm/intent\": 0.00019631438772194088,\n",
+            "    \"self-harm/instructions\": 1.0303113413101528e-05,\n",
+            "    \"harassment/threatening\": 0.914252519607544,\n",
+            "    \"violence\": 0.9949954748153687\n",
+            "  }\n",
+            "}\n"
+          ]
+        }
+      ]
     }
   ]
 }
