使用 Colaboratory 创建

--- a/aillm_5.ipynb
+++ b/aillm_5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Fqx34UTstWeOyIUNLe0NPxWgj5mThr32",
-      "authorship_tag": "ABX9TyOiZ+Fi+Dp5RgyqK40BhSGo",
+      "authorship_tag": "ABX9TyMs26napaVnOzIKAzw5PGBL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "id": "WqMhzfXcxuTy",
         "outputId": "cd7abe1e-4e18-4c82-8672-d0fe30f5491b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "eyueUP2ESCuS"
       },
@@ -95,23 +95,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import json\n",
-        "f = open('data/openai_sk.json', 'r')\n",
-        "content = f.read()\n",
-        "a = json.loads(content)\n",
-        "f.close()\n",
-        "openai_sk = a['sk']\n",
-        "print(openai_sk)"
-      ],
-      "metadata": {
-        "id": "DhjBU46br8xo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import tiktoken\n",
         "\n",
         "embedding_encoding = \"cl100k_base\"  # this the encoding for text-embedding-ada-002\n",
@@ -137,7 +120,7 @@
         "id": "MuN97JLaTHyD",
         "outputId": "2b5646d1-0aee-4646-da72-b7067fe573bc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,6 +167,10 @@
         "from openai.embeddings_utils import get_embeddings\n",
         "import openai, backoff\n",
         "\n",
+        "from sk_utils import read_sk\n",
+        "\n",
+        "openai.api_key = read_sk()\n",
+        "\n",
         "@backoff.on_exception(backoff.expo, openai.error.RateLimitError)\n",
         "def get_embeddings_with_backoff(prompts, engine):\n",
         "    embeddings = []\n",
@@ -197,7 +184,6 @@
         "prompts = df.text.tolist()\n",
         "prompt_batches = [prompts[i:i+batch_size] for i in range(0, len(prompts), batch_size)]\n",
         "\n",
-        "openai.api_key = openai_sk\n",
         "embedding_model = \"text-embedding-ada-002\"\n",
         "\n",
         "embeddings = []\n",
@@ -211,7 +197,7 @@
       "metadata": {
         "id": "3RsAWnBJVpXO"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,12 +243,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 714
+          "height": 677
         },
         "id": "3igfg_0xYpfu",
         "outputId": "f2ce0b0e-17bd-41b1-f20a-a413e37c016f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -792,7 +778,7 @@
         "id": "fn5twZ0Hai9j",
         "outputId": "6a2653f6-2d02-4c40-985c-f4229cec26b2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -855,7 +841,7 @@
         "id": "UHJ34MWsbQNW",
         "outputId": "bebf21e8-2700-45d0-ff85-823af6e72e3b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,7 +916,7 @@
         "id": "tZftOk5ybxBp",
         "outputId": "dbb4869d-cbe7-4e7f-98d5-cc4ec4765b74"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -976,7 +962,7 @@
       "metadata": {
         "id": "aQSWPSwaCTE5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -997,7 +983,7 @@
         },
         "outputId": "a6986bbd-85a4-414d-882b-89897831a03c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,7 +1019,7 @@
         },
         "outputId": "d5b0819d-fcb3-4d27-91ec-9301fbe9aee7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
