使用 Colaboratory 创建

--- a/aillm_0211.ipynb
+++ b/aillm_0211.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RVnIJDw39Wf4",
-        "outputId": "9258f71c-0fcc-476c-e6fe-ddaa80220c4a"
+        "outputId": "3d75b410-4125-40c7-f001-da7a85735f87"
       },
       "outputs": [
         {
@@ -295,45 +295,40 @@
         "model = whisper.load_model(\"large\")"
       ],
       "metadata": {
-        "id": "UP132FG8K5Ja"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UP132FG8K5Ja",
+        "outputId": "f52bd18e-265b-419b-97f1-603a28688f33"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████████████████████████████████| 2.87G/2.87G [00:25<00:00, 121MiB/s]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6T8OdJ6uTWSa",
-        "outputId": "17b405d8-e8bd-4358-8d5c-da24f7ae63cd"
+        "outputId": "8112de0c-44ee-49f5-8a0f-1af62da3cf12"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
+          "output_type": "stream",
           "name": "stdout",
-          "output_type": "stream",
           "text": [
-            "./data/podcast/test-1_0.mp3\n",
-            "这是一段中文播客。\n",
-            "\n",
-            "\n",
-            "./data/podcast/transcripts/local_test-1_0.txt\n"
-          ]
-        },
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/whisper/transcribe.py:114: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
-            "  warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n"
+            "Transcripted:  ./data/podcast/test-1_0.mp3\n",
+            "Transcripted:  ./data/podcast/test-1_1.mp3\n"
           ]
         }
       ],
@@ -342,11 +337,7 @@
         "index = 2\n",
         "\n",
         "def transcript(clip, prompt, output):\n",
-        "    print(clip)\n",
-        "    print(prompt)\n",
-        "    print(output)\n",
         "    result = model.transcribe(clip, initial_prompt=prompt)\n",
-        "    print(result['text'])\n",
         "    with open(output, \"w\") as f:\n",
         "        f.write(result['text'])\n",
         "    print(\"Transcripted: \", clip)\n",
@@ -359,8 +350,8 @@
         "    transcript(clip, prompt, output)\n",
         "    # get last sentence of the transcript\n",
         "    with open(output, \"r\") as f:\n",
-        "        transcript = f.read()\n",
-        "    sentences = transcript.split(\"。\")\n",
+        "        output_text = f.read()\n",
+        "    sentences = output_text.split(\"。\")\n",
         "    prompt = original_prompt + sentences[-1]"
       ]
     }
@@ -368,7 +359,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHNrM1HM4eljlXzG+8tCvp",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOEubFhLbNGYwy/W+vbw8Rk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -377,7 +369,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
