使用 Colaboratory 创建

--- a/aillm_0302.ipynb
+++ b/aillm_0302.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrhm5rwMuDRStWLEmRI0rl",
+      "authorship_tag": "ABX9TyMzypBYf2oEvanf9Bt+hlWP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,8 +196,9 @@
       "source": [
         "from sk_utils import read_sk\n",
         "azure_sk = read_sk('azure_sk')\n",
+        "azure_rg = read_sk('azure_rg')\n",
         "%env AZURE_SPEECH_KEY=$azure_sk\n",
-        "%env AZURE_SPEECH_REGION=eastus"
+        "%env AZURE_SPEECH_REGION=$azure_rg"
       ],
       "metadata": {
         "id": "LZ2AijhgpDVk"
