--- a/aillm_0107.ipynb
+++ b/aillm_0107.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Fqx34UTstWeOyIUNLe0NPxWgj5mThr32",
-      "authorship_tag": "ABX9TyMs26napaVnOzIKAzw5PGBL",
+      "authorship_tag": "ABX9TyO684jtxZQSzaGEmEQNUfyE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import openai\n",
+        "from sk_utils import read_sk\n",
+        "openai_sk = read_sk()\n",
+        "%env OPENAI_API_KEY=$openai_sk"
+      ],
+      "metadata": {
+        "id": "pa6AHcUkyqwq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -166,10 +180,9 @@
       "source": [
         "from openai.embeddings_utils import get_embeddings\n",
         "import openai, backoff\n",
+        "import os\n",
         "\n",
-        "from sk_utils import read_sk\n",
-        "\n",
-        "openai.api_key = read_sk()\n",
+        "openai.api_key = os.environ.get(\"OPENAI_API_KEY\")\n",
         "\n",
         "@backoff.on_exception(backoff.expo, openai.error.RateLimitError)\n",
         "def get_embeddings_with_backoff(prompts, engine):\n",
